feat: improved naming in swagger-fix-1 for generation methods

--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -5,4 +5,8 @@ tasks:
     cmds:
       - task --list-all
 
-  regen: swagger generate client
+  regen:
+    cmds:
+      - rm -rf client
+      - rm -rf models
+      - swagger generate client
